# hello-world

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile.mak  README.md  appveyor.yml  dosbox.conf
assets/: meta.xml
scripts/: ci.sh  dos.bat  gitflow.sh
src/: CMakeLists.txt  main.cpp
targets/: dos.mak  nds.mak  wii.mak
